card_design: Updated

--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,8 @@
     "\n",
     "# clear the card_images folder\n",
     "print(\"Clearing card_images folder...\")\n",
-    "for filename in os.listdir(\"card_images\"):\n",
-    "    os.remove(os.path.join(\"card_images\", filename))\n",
+    "for filename in os.listdir(\"card_box\"):\n",
+    "    os.remove(os.path.join(\"card_box\", filename))\n",
     "\n",
     "\n",
     "\n",
@@ -96,37 +96,45 @@
     "    # return the higher of the two scores\n",
     "    return max(recent_score, all_time_score)\n",
     "\n",
-    "def generate_card(title, definition, points):\n",
-    "    # determine the font size based on the length of the definition\n",
-    "    # font_size = int(len(definition) / 20)\n",
-    "    font_size = max(30, int(len(definition) / 20))\n",
-    "    # create the image and draw objects\n",
-    "    # set the canvas size to 8.5 cm by 5.5 cm\n",
+    "def generate_card(title, definition, points, name=None):\n",
+    "    # if the font is 20 then the max width of the text is 40 characters. Use this to determine how large the title should be.\n",
     "    image = Image.new('RGB', (550, 850), (255, 255, 255))\n",
     "    draw = ImageDraw.Draw(image)\n",
+    "    # the title is wrapped to 40 characters, so the height of the rectangle is the number of characters * 20 (the height of the font)\n",
+    "    title_size = 20\n",
+    "    font_title = ImageFont.truetype('./fonts/Menlo.ttc', title_size)\n",
+    "    font_description = ImageFont.truetype('./fonts/Menlo.ttc', 20)\n",
+    "    font_points = ImageFont.truetype('./fonts/Menlo.ttc', 18)\n",
+    "    title_wrapped = textwrap.wrap(title, width=40)\n",
+    "    # draw the title centered horizontally, and 30 pixels from the top. The title is wrapped to 40 characters, so the height of the rectangle is the number of characters * 20 (the height of the font)\n",
     "\n",
-    "    # select a font and draw the title in a rectangle\n",
-    "    font = ImageFont.truetype('./fonts/Menlo.ttc', 15)\n",
-    "    draw.rectangle([(10, 10), (540, 50)], fill='lightgrey')\n",
-    "    draw.text((20, 20), title, fill=(0, 0, 0), font=font)\n",
+    "    title_rectangle_height = len(title_wrapped) * 20\n",
+    "    draw.rectangle([(10, 10), (540, 10 + title_rectangle_height)], fill='lightblue')\n",
+    "    y_text = 20\n",
+    "    for line in title_wrapped:\n",
+    "        draw.text((270, y_text), line, fill=(0, 0, 0), font=font_title, anchor='mm')\n",
+    "        y_text += 20\n",
+    "    # draw the definition left justified, and 10 pixels from the the bottom of the title rectangle. The definition is wrapped to 40 characters, so the height of the rectangle is the number of characters / 40 * 20 (the height of the font).\n",
+    "    definition_wrapped = textwrap.wrap(definition, width=40)\n",
+    "    definition_rectangle_height = len(definition_wrapped) * 20\n",
+    "    draw.rectangle([(10, 10 + title_rectangle_height + 10), (540, 10 + title_rectangle_height + 10 + definition_rectangle_height)], fill='white')\n",
+    "    y_text = 10 + title_rectangle_height + 20\n",
+    "    for line in definition_wrapped:\n",
+    "        draw.text((10, y_text), line, fill=(0, 0, 0), font=font_description, anchor='lm')\n",
+    "        y_text += 20\n",
     "\n",
-    "    # draw the definition in a rectangle, and soft wrap the text. Don't exceed 40 characters per line. \n",
-    "    # wrapped_definition = textwrap.wrap(definition, width=40)\n",
-    "    definition = str(definition) if isinstance(definition, str) else definition[0]\n",
-    "    wrapped_definition = textwrap.fill(definition, width=80)\n",
-    "    wrapped_definition_str = \"\\n\".join(wrapped_definition)\n",
-    "    font = ImageFont.truetype('./fonts/Menlo.ttc', font_size)\n",
-    "    draw.text((20, 70), wrapped_definition, fill=(0, 0, 0))\n",
     "\n",
-    "    # draw a circle around the point value\n",
-    "    draw.ellipse([(520, 820), (540, 840)], fill='lightgreen')\n",
-    "    # draw the point value\n",
     "\n",
-    "    font = ImageFont.truetype('./fonts/Menlo.ttc', font_size + 1)\n",
-    "    draw.text((525, 825), str(points), fill=(0, 0, 0))\n",
-    "\n",
-    "    # save the image\n",
-    "    image.save('./card_images/{}.png'.format(len(os.listdir('./card_images/'))))\n",
+    "    # draw the points at the bottom of the card centered horizontally, and 20 pixels from the bottom\n",
+    "    # draw the rectangle around the points, with a light green background, add 10 pixels to the height of the rectangle to make it a little bigger and center the text within the rectangle vertically\n",
+    "    draw.rectangle([(10, 850 - 30 - 10), (540, 850 - 10)], fill='lightgreen')\n",
+    "    # draw the text in the rectangle\n",
+    "    draw.text((270, 850 - 30 - 5), str(points), fill=(0, 0, 0), font=font_points, anchor='mm') # anchor='mm' centers the text horizontally and vertically\n",
+    "    # save the image with the name of the card if not None\n",
+    "    if name is not None:\n",
+    "        image.save('./card_box/{}.png'.format(name)) # save the image with the name of the card, if it's not None\n",
+    "    else:\n",
+    "        image.save('./card_box/{}.png'.format(len(os.listdir('./card_box/')))) # save the image with the name of the number of images in the folder\n",
     "\n",
     "def generate_physical_cards():\n",
     "    #^ Example usage\n",
@@ -167,21 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Guerrilla Zoo', 'summary': ['Guerrilla Zoo', 'Guerrilla Zoo is a contemporary arts organisation formed in 2004 by founder and creative director James Elphick. The group produce a variety of creative events from experiential environments, live concerts, festivals, immersive theatre, art exhibitions, arts awards, parties and masquerade balls.'], 'related': 24, 'summary_short': \"['Guerrilla Zoo', 'Guerrilla Zoo is a contemporary arts organisation formed in 2004 by founder and creative director James Elphick.The group produce a variety of creative events from experiential environments, live concerts, festivals, immersive theatre, art exhibitions, arts awards, parties and masquerade balls.']\"}\n"
+      "{'title': 'United States', 'summary': ['United States', 'United States, The United States of America U.S.A. or USA, commonly known as the United States U.S. or US or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major unincorporated territories, nine Minor Outlying Islands, and 326 Indian reservations. It is the worlds third-largest country by both land and total area. The United States shares land borders with Canada to its north and with Mexico to its south. It has maritime borders with the Bahamas, Cuba, Russia, and other nations. With a population of over 331 million, it is the most populous country in the Americas and the third most populous in the world. The national capital is Washington, D.C., and the most populous city and financial center is New York City.\\\\nPaleo-Americans migrated from Siberia to the North American mainland at least 12,000 years ago, and advanced cultures began to appear later on. These advanced cultures had almost completely declined by the time Europeans arrived in North America and began to colonize the continent. The United States emerged from the Thirteen British Colonies when disputes with the British Crown over taxation and political representation led to the American Revolution 17651791, which established the nations independence. In the late 18th century, the U.S. began expanding across North America, gradually obtaining new territories, sometimes through war, frequently displacing Native Americans, and admitting new states. By 1848, the United States spanned the continent from east to west. The controversy surrounding the practice of slavery culminated in the secession of the Confederate States of America, which fought the remaining states of the Union during the American Civil War 18611865. With the Unions victory and preservation, slavery was abolished by the Thirteenth Amendment.\\\\nBy 1900, the United States had become the worlds largest economy, and the SpanishAmerican War and World War I established the country as a world power. After Japans surprise attack on Pearl Harbor in 1941, the U.S. entered World War II on the Allied side. The aftermath of the war left the United States and the Soviet Union as the worlds two superpowers. During the Cold War, both countries engaged in a struggle for ideological dominance but avoided direct military conflict. They also competed in the Space Race, which culminated in the 1969 American spaceflight that first landed humans on the Moon. Simultaneously, the civil rights movement 19541968 led to legislation abolishing state and local Jim Crow laws and other codified racial discrimination against African Americans. The Soviet Unions dissolution in 1991 ended the Cold War, leaving the United States as the worlds sole superpower. The September 11 attacks in 2001 resulted in the United States launching the war on terror, which included the War in Afghanistan 20012021 and the Iraq War 20032011.\\\\nThe United States is a federal republic with three separate branches of government, including a bicameral legislature. It is a liberal democracy and market economy; it ranks high in international measures of human rights, quality of life, income and wealth, economic competitiveness, and education; and it has low levels of perceived corruption. It has high levels of incarceration and inequality, allows capital punishment, and lacks universal health care. As a melting pot of cultures and ethnicities, the U.S. has been shaped by centuries of immigration.\\\\nThe United States is a highly developed country, and its economy accounts for approximately a quarter of global GDP and is the worlds largest by GDP at market exchange rates. By value, the United States is the worlds largest importer and second-largest exporter. Although it accounts for just over 4.2% of the worlds total population, the U.S. holds over 30% of the total wealth in the world, the largest share held by any country. The United States is a founding member of the United Nations, World Bank, International Monetary Fund, Organization of American States, NATO, and is a permanent member of the United Nations Security Council. The country makes up more than a third of global military spending and is the foremost military power in the world and a leading political, cultural, and scientific force.'], 'related': 1801}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2521/2521 [00:43<00:00, 57.74it/s]"
+      "100%|██████████| 4651/4651 [02:00<00:00, 38.53it/s]"
      ]
     },
     {
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,8 +225,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_84303/1640415744.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Get a list of the links_on_page values from the card_deck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlinks_on_page_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'links_on_page'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcard_deck\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Fit the scaler on the links_on_page values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_84303/1640415744.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Get a list of the links_on_page values from the card_deck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlinks_on_page_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'links_on_page'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcard_deck\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Fit the scaler on the links_on_page values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_41568/1640415744.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Get a list of the links_on_page values from the card_deck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlinks_on_page_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'links_on_page'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcard_deck\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Fit the scaler on the links_on_page values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/d1tlq3k91hb0lj6x90xpzb4r0000gn/T/ipykernel_41568/1640415744.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Get a list of the links_on_page values from the card_deck\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlinks_on_page_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'links_on_page'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcard_deck\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Fit the scaler on the links_on_page values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'links_on_page'"
      ]
     }
