--- a/card_point_revision.ipynb
+++ b/card_point_revision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
     "    card_deck = json.load(read_file)\n",
     "\n",
-    "def revise_point_values(card_deck):\n",
+    "def revise_point_values(card_deck, max_points=100):\n",
     "    # Initialize a dictionary to store the word counts for each card\n",
     "    word_counts = {}\n",
     "    # Initialize a list to store the word counts for each card\n",
@@ -59,7 +59,7 @@
     "        # Increment the card id\n",
     "        card_id += 1\n",
     "    # Use MinMaxScaler to scale the word counts to a range of 1 to 100\n",
-    "    scaler = MinMaxScaler(feature_range=(1, 100))\n",
+    "    scaler = MinMaxScaler(feature_range=(1, int(max_points)))\n",
     "    scaled_word_counts = scaler.fit_transform(pd.DataFrame(card_word_counts))\n",
     "    # Iterate through each card in the card deck\n",
     "    card_id = 0\n",
@@ -95,35 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4651/4651 [00:01<00:00, 4258.43it/s]\n",
-      "100%|██████████| 4651/4651 [00:00<00:00, 707801.16it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': 'Climate change and cities', 'summary': ['Climate change and cities', 'Climate change and cities are deeply connected. Cities are one of the greatest contributors and likely best opportunities for addressing climate change. Cities are also one of the most vulnerable parts of the human society to the effects of climate change, and likely one of the most important solutions for reducing the environmental impact of humans. More than half of the worlds population is in cities, consuming a large portion of food and goods produced outside of cities. The increase of urban population growth is one of the main factors in air-quality problems. In the year 2016, 31 mega-cities reported having at least 10 million in their population, 8 of which surrear endd 20 million people. The UN projects that 68% of the world population will live in urban areas by 2050. Hence, cities have a significant influence on construction and transportationtwo of the key contributors to global warming emissions. Moreover, because of processes that create climate conflict and climate refugees, city areas are expected to grow during the next several decades, stressing infrastructure and concentrating more impoverished peoples in cities.Because of the high density and effects like the urban heat island affect, weather changes due to climate change are likely to greatly effect cities, exacerbating existing problems, such as air pollution, water scarcity, and heat illness in the metropolitan areas. Studies have shown that if body temperature exceeds 39C for a period of time, serious heat stroke may occur. Some of the other extreme weather conditions caused by climate change include extreme floods, deathly snowstorms, ice storms, heat waves, droughts, and hurricanes, which are often deathly and harmful. Studies have shown that heat waves are three times more likely to occur and have become more intense since the 1960s. Moreover, because most cities have been built on rivers or coastal areas, cities are frequently vulnerable to the subsequent effects of sea level rise, which cause coastal flooding and erosion, and those effects are deeply connected with other urban environmental problems, like subsidence and aquifer depletion.\\nA report by the C40 Cities Climate Leadership Group described consumption based emissions as having significantly more impact than production-based emissions within cities. The report estimates that 85% of the emissions associated with goods within a city is generated outside of that city. Climate change adaptation and mitigation investments in cities will be important in reducing the impacts of some of the largest contributors of greenhouse gas emissions: for example, increased density allows for redistribution of land use for agriculture and reforestation, improving transportation efficiencies, and greening construction largely due to cements outsized role in climate change and improvements in sustainable construction practices and weatherization.In the most recent past, increasing urbanization has also been proposed as a phenomenon that has a reducing effect on the global rate of carbon emission primarily because with urbanization comes technical prowess which can help drive sustainability. Lists of high impact climate change solutions tend to include city-focused solutions; for example, Project Drawdown recommends several major urban investments, including improved bicycle infrastructure, building retrofitting, district heating, public transit, and walkable cities as important solutions.Because of this, the international community has formed coalitions of cities such as the C40 Cities Climate Leadership Group and ICLEI and policy goals, such as Sustainable Development Goal 11 sustainable cities and communities, to activate and focus attention on these solutions.'], 'related': 401, 'summary_short': 'Moreover, because most cities have been built on rivers or coastal areas, cities are frequently vulnerable to the subsequent effects of sea level rise, which cause coastal flooding and erosion, and those effects are deeply connected with other urban environmental problems, like subsidence and aquifer depletion.\\\\nA report by the C40 Cities Climate Leadership Group described consumption based emissions as having significantly more impact than production-based emissions within cities.Climate change adaptation and mitigation investments in cities will be important in reducing the impacts of some of the largest contributors of greenhouse gas emissions: for example, increased density allows for redistribution of land use for agriculture and reforestation, improving transportation efficiencies, and greening construction largely due to cements outsized role in climate change and improvements in sustainable construction practices and weatherization.In the most recent past, increasing urbanization has also been proposed as a phenomenon that has a reducing effect on the global rate of carbon emission primarily because with urbanization comes technical prowess which can help drive sustainability.', 'summary_clean': 'Moreover because of processes that create climate conflict and climate refugees city areas are expected to grow during the next several decades stressing infrastructure and concentrating more impoverished peoples in cities Because of the high density and effects like the urban heat island affect weather changes due to climate change are likely to greatly effect cities exacerbating existing problems such as air pollution water scarcity and heat illness in the metropolitan areas Climate change adaptation and mitigation investments in cities will be important in reducing the impacts of some of the largest contributors of greenhouse gas emissions for example increased density allows for redistribution of land use for agriculture and reforestation improving transportation efficiencies and greening construction largely due to cements outsized role in climate change and improvements in sustainable construction practices and weatherization In the most recent past increasing urbanization has also been proposed as a phenomenon that has a reducing effect on the global rate of carbon emission primarily because with urbanization comes technical prowess which can help drive sustainability ', 'point_value': 51}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 4651/4651 [00:01<00:00, 4373.59it/s]\n",
+      "100%|██████████| 4651/4651 [00:00<00:00, 607432.91it/s]\n"
      ]
     }
    ],
    "source": [
     "# revise point values\n",
-    "card_deck = revise_point_values(card_deck)\n"
+    "card_deck = revise_point_values(card_deck,20)\n"
    ]
   }
  ],
