card_design: Updated

--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clearing card_images folder...\n",
+      "Initialized process, and ready to generate physical cards...\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import textwrap\n",
@@ -166,38 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Kokotoni Wilf', 'summary': ['Kokotoni Wilf', 'Kokotoni Wilf, Kokotoni Wilf is an action-adventure game released by Elite Systems in 1984 for the Amstrad CPC, Commodore 64, and ZX Spectrum home computers. The game was inspired by Jet Set Willy.'], 'related': 20}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3795/3795 [01:35<00:00, 39.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "generate_physical_cards()\n",
     "print(\"Done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "# Create a MinMaxScaler object\n",
-    "scaler = MinMaxScaler()\n",
-    "\n",
-    "# Get a list of the links_on_page values from the card_deck\n",
-    "links_on_page_values = [card['links_on_page'] for card in card_deck]\n",
-    "\n",
-    "# Fit the scaler on the links_on_page values\n",
-    "scaler.fit(links_on_page_values)\n",
-    "\n",
-    "# Use the scaler to transform the links_on_page values\n",
-    "scaled_links_on_page = scaler.transform(links_on_page_values)\n",
-    "\n",
-    "# Update the points value for each card in the card_deck with the scaled links_on_page value\n",
-    "for i, card in enumerate(card_deck):\n",
-    "    card['points'] = int(scaled_links_on_page[i])\n"
    ]
   }
  ],
