card_design: Updated

--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -175,35 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Kokotoni Wilf', 'summary': ['Kokotoni Wilf', 'Kokotoni Wilf, Kokotoni Wilf is an action-adventure game released by Elite Systems in 1984 for the Amstrad CPC, Commodore 64, and ZX Spectrum home computers. The game was inspired by Jet Set Willy.'], 'related': 20}\n"
+      "{'title': 'Hold come what may', 'summary': ['Hold come what may', 'Hold come what may, Hold come what may is a phrase popularized by logician Willard Van Orman Quine. Beliefs that are held come what may are beliefs one is unwilling to give up, regardless of any evidence with which one might be presented.Quine held that any belief can be held come what may, so long as one makes suitable adjustments to other beliefs. In other words, all beliefs are rationally revisable no statement is immune to revision. He used this to reject the distinction between analytic truths which are true come what may and synthetic truths which are true at least in part because of the state of the world.\\\\nMany philosophers argue to the contrary, believing that, for example, the laws of thought cannot be revised and may be held come what may. Quine believed that all beliefs are linked by a web of beliefs, in which a belief is linked to another belief by supporting relations, but if one belief is found untrue, there is ground to find the linked beliefs also untrue. The latter statement is usually referred to as either confirmation holism or DuhemQuine thesis.\\\\nA closely related concept is hold more stubbornly at least, also popularized by Quine. Some beliefs may be more useful than others, or may be implied by a large number of beliefs. Examples might be laws of logic, or the belief in an external world of physical objects. Altering such central portions of the web of beliefs would have immense, ramifying consequences, and affect many other beliefs. It is better to alter auxiliary beliefs around the edges of the web of beliefs considered to be sense beliefs, rather than main beliefs in the face of new evidence unfriendly to ones central principles. Thus, while one might agree that there is no belief one can hold come what may, there are some for which there is ample practical ground to hold more stubbornly at least.'], 'related': 12}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3795/3795 [01:35<00:00, 39.66it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 81%|████████  | 3293/4054 [01:29<00:27, 28.00it/s]"
      ]
     }
    ],
