--- a/card_point_revision.ipynb
+++ b/card_point_revision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
     "    card_deck = json.load(read_file)\n",
     "\n",
-    "def revise_point_values(card_deck, max_points=100):\n",
+    "def revise_point_values(card_deck, max_points=10):\n",
     "    # Initialize a dictionary to store the word counts for each card\n",
     "    word_counts = {}\n",
     "    # Initialize a list to store the word counts for each card\n",
@@ -69,8 +69,8 @@
     "        # Get the scaled word count for the card\n",
     "        scaled_word_count = scaled_word_counts[card_id]\n",
     "        # Get the card's point value if it exists\n",
-    "        point_value = card['point_value'] if 'point_value' in card else 0\n",
-    "        rounded_value = round(scaled_word_count[0])\n",
+    "        # point_value = card['point_value'] if 'point_value' in card else 0\n",
+    "        rounded_value = int(scaled_word_count[0])\n",
     "\n",
     "        # Update the card's point value to the scaled word count\n",
     "        card['point_value'] = rounded_value\n",
@@ -95,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3795/3795 [00:00<00:00, 5246.08it/s]\n",
-      "100%|██████████| 3795/3795 [00:00<00:00, 702382.12it/s]\n"
+      "100%|██████████| 4053/4053 [00:00<00:00, 4891.03it/s]\n",
+      "100%|██████████| 4053/4053 [00:00<00:00, 1760695.40it/s]\n"
      ]
     }
    ],
    "source": [
     "# revise point values\n",
-    "card_deck = revise_point_values(card_deck,20)\n"
+    "card_deck = revise_point_values(card_deck,10)\n"
    ]
   }
  ],
