card_design: Updated

--- a/card_cleaner.ipynb
+++ b/card_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,26 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this script parses downloaded cards for blacklisted words and removes the cards from the deck.\n",
     "\n",
-    "blacklist = ['fuck','shit']\n",
+    "blacklist = ['fuck','shit', 'nigger','nigga']\n",
+    "# if a card has more than half the words in another language remove it.\n",
+    "from \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 3980/3996 [00:00<00:00, 255883.53it/s]"
+      "100%|█████████▉| 4065/4082 [00:00<00:00, 268037.19it/s]"
      ]
     },
     {
@@ -93,7 +95,8 @@
       "Removing card: Lords of Thunder\n",
       "Removing card: Techno Viking\n",
       "Removing card: International State College of the Philippines\n",
-      "Removing card: Dat Boi\n"
+      "Removing card: Dat Boi\n",
+      "Removing card: Storm Area 51\n"
      ]
     },
     {
