--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -189,7 +189,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 81%|████████  | 3293/4054 [01:29<00:27, 28.00it/s]"
+      "100%|██████████| 4054/4054 [01:52<00:00, 35.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
