card_design: Updated

--- a/card_cleaner.ipynb
+++ b/card_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,28 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this script parses downloaded cards for blacklisted words and removes the cards from the deck.\n",
     "\n",
-    "blacklist = ['fuck','shit', 'nigger','nigga']\n",
+    "blacklist = ['fuck','shit', 'nigger','nigga',\\\n",
+    "    'Glossary','List','damn','bastard','bitch']\n",
     "# if a card has more than half the words in another language remove it.\n",
-    "from \n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 4065/4082 [00:00<00:00, 268037.19it/s]"
+      " 99%|█████████▉| 4199/4229 [00:00<00:00, 64153.79it/s]"
      ]
     },
     {
@@ -78,25 +79,50 @@
       "Removing card: How to Be a Complete Bastard\n",
       "Removing card: How to Be a Complete Bastard\n",
       "list.remove(x): x not in list\n",
+      "Removing card: How to Be a Complete Bastard\n",
+      "list.remove(x): x not in list\n",
+      "Removing card: How to Be a Complete Bastard\n",
+      "list.remove(x): x not in list\n",
       "Removing card: Gearless Joe\n",
       "Removing card: Mega Man 9\n",
       "Removing card: The Show Must Go On (Queen song)\n",
       "Removing card: Suikoden\n",
+      "Removing card: Kenny McCormick\n",
+      "Removing card: Terry Tate: Office Linebacker\n",
+      "Removing card: Forumwarz\n",
+      "Removing card: Piper Halliwell\n",
       "Removing card: Work Time Fun\n",
+      "Removing card: Disciples III: Renaissance\n",
       "Removing card: Osomatsu-kun\n",
       "Removing card: Go the Fuck to Sleep\n",
       "Removing card: Go the Fuck to Sleep\n",
       "list.remove(x): x not in list\n",
+      "Removing card: Gimme More\n",
+      "Removing card: Really Achieving Your Childhood Dreams\n",
       "Removing card: Shadow Hearts (video game)\n",
+      "Removing card: Damning with faint praise\n",
+      "Removing card: Damning with faint praise\n",
+      "list.remove(x): x not in list\n",
       "Removing card: Tales of Vesperia\n",
       "Removing card: Otome wa Boku ni Koishiteru\n",
       "Removing card: Otome wa Boku ni Koishiteru\n",
       "list.remove(x): x not in list\n",
       "Removing card: Lords of Thunder\n",
+      "Removing card: Bitch Lasagna\n",
+      "Removing card: Bitch Lasagna\n",
+      "list.remove(x): x not in list\n",
+      "Removing card: Britt Westbourne\n",
       "Removing card: Techno Viking\n",
       "Removing card: International State College of the Philippines\n",
       "Removing card: Dat Boi\n",
-      "Removing card: Storm Area 51\n"
+      "Removing card: Storm Area 51\n",
+      "Removing card: What a Pushkin, what a son of a bitch!\n",
+      "Removing card: What a Pushkin, what a son of a bitch!\n",
+      "list.remove(x): x not in list\n",
+      "Removing card: Fuck her right in the pussy\n",
+      "Removing card: Fuck her right in the pussy\n",
+      "list.remove(x): x not in list\n",
+      "Removing card: Fujiidera Stadium\n"
      ]
     },
     {
@@ -125,6 +151,18 @@
     "                card_deck.remove(card)\n",
     "            except Exception as e:\n",
     "                print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save the cards\n",
+    "# # save card_deck to ppn_deck.json file\n",
+    "# with open(\"ppn_deck_purged.json\", \"w\") as write_file:\n",
+    "#     json.dump("
    ]
   }
  ],
