--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -175,21 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Hold come what may', 'summary': ['Hold come what may', 'Hold come what may, Hold come what may is a phrase popularized by logician Willard Van Orman Quine. Beliefs that are held come what may are beliefs one is unwilling to give up, regardless of any evidence with which one might be presented.Quine held that any belief can be held come what may, so long as one makes suitable adjustments to other beliefs. In other words, all beliefs are rationally revisable no statement is immune to revision. He used this to reject the distinction between analytic truths which are true come what may and synthetic truths which are true at least in part because of the state of the world.\\\\nMany philosophers argue to the contrary, believing that, for example, the laws of thought cannot be revised and may be held come what may. Quine believed that all beliefs are linked by a web of beliefs, in which a belief is linked to another belief by supporting relations, but if one belief is found untrue, there is ground to find the linked beliefs also untrue. The latter statement is usually referred to as either confirmation holism or DuhemQuine thesis.\\\\nA closely related concept is hold more stubbornly at least, also popularized by Quine. Some beliefs may be more useful than others, or may be implied by a large number of beliefs. Examples might be laws of logic, or the belief in an external world of physical objects. Altering such central portions of the web of beliefs would have immense, ramifying consequences, and affect many other beliefs. It is better to alter auxiliary beliefs around the edges of the web of beliefs considered to be sense beliefs, rather than main beliefs in the face of new evidence unfriendly to ones central principles. Thus, while one might agree that there is no belief one can hold come what may, there are some for which there is ample practical ground to hold more stubbornly at least.'], 'related': 12}\n"
+      "{'title': 'Spirit of the Blues', 'summary': ['Spirit of the Blues', 'Spirit of the Blues, Spirit of the Blues is a song recorded by Kinsley Music. It was released in April 1984 by Liverpool-based Direct Records ahead of the 1984 FA Cup Final.\\\\nIn September 2020, the song became popular having been featured in social media memes. The origin of the meme was posted on 2 September 2020 on Twitter by user adamsg1878; it contained footage from the music video of Coldplays Adventure of a Lifetime featuring chimpanzees dancing around and enjoying themselves while Spirit of the Blues music played. It was accompanied with the text Were actually signing James, Allan and Doucoure.The song reached #65 in the Official Singles Chart Top 100 and #1 in the downloads chart for 2-8 October 2020. It was re-released on vinyl on 2 October 2020 by Everton F.C. in conjunction with Cherry Red Records, with a piano version of Z-Cars on the B-side.'], 'related': 39}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4054/4054 [01:52<00:00, 35.96it/s]"
+      "100%|██████████| 4234/4234 [01:50<00:00, 38.37it/s]"
      ]
     },
     {
