groupmedynamic_updates: Added

--- a/card_cleaner.ipynb
+++ b/card_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 99%|█████████▉| 4199/4229 [00:00<00:00, 64153.79it/s]"
+      " 99%|█████████▉| 5132/5167 [00:00<00:00, 73940.68it/s]"
      ]
     },
     {
@@ -95,34 +95,29 @@
       "Removing card: Disciples III: Renaissance\n",
       "Removing card: Osomatsu-kun\n",
       "Removing card: Go the Fuck to Sleep\n",
-      "Removing card: Go the Fuck to Sleep\n",
-      "list.remove(x): x not in list\n",
       "Removing card: Gimme More\n",
       "Removing card: Really Achieving Your Childhood Dreams\n",
       "Removing card: Shadow Hearts (video game)\n",
       "Removing card: Damning with faint praise\n",
-      "Removing card: Damning with faint praise\n",
-      "list.remove(x): x not in list\n",
       "Removing card: Tales of Vesperia\n",
       "Removing card: Otome wa Boku ni Koishiteru\n",
-      "Removing card: Otome wa Boku ni Koishiteru\n",
-      "list.remove(x): x not in list\n",
       "Removing card: Lords of Thunder\n",
       "Removing card: Bitch Lasagna\n",
-      "Removing card: Bitch Lasagna\n",
-      "list.remove(x): x not in list\n",
       "Removing card: Britt Westbourne\n",
       "Removing card: Techno Viking\n",
       "Removing card: International State College of the Philippines\n",
       "Removing card: Dat Boi\n",
       "Removing card: Storm Area 51\n",
       "Removing card: What a Pushkin, what a son of a bitch!\n",
-      "Removing card: What a Pushkin, what a son of a bitch!\n",
-      "list.remove(x): x not in list\n",
       "Removing card: Fuck her right in the pussy\n",
-      "Removing card: Fuck her right in the pussy\n",
-      "list.remove(x): x not in list\n",
-      "Removing card: Fujiidera Stadium\n"
+      "Removing card: Fujiidera Stadium\n",
+      "Removing card: 2 Girls 1 Cup\n",
+      "Removing card: Shita-kiri Suzume\n",
+      "Removing card: Frankly, my dear, I don't give a damn\n",
+      "Removing card: Fuck wit Dre Day (And Everybody's Celebratin')\n",
+      "Removing card: Resting bitch face\n",
+      "Removing card: Resting bitch face\n",
+      "list.remove(x): x not in list\n"
      ]
     },
     {
@@ -155,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +158,13 @@
     "# # save card_deck to ppn_deck.json file\n",
     "# with open(\"ppn_deck_purged.json\", \"w\") as write_file:\n",
     "#     json.dump("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   }
  ],
