--- a/card_creator.ipynb
+++ b/card_creator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,10 @@
     "#     json.dump(card_deck, write_file, indent=4)\n",
     "\n",
     "# read card_deck from ppn_deck.json file\n",
-    "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
+    "# with open(\"ppn_deck.json\", \"r\") as read_file:\n",
+    "    # card_deck = json.load(read_file)\n",
+    "with open('ppn_deck_cleaned_clues_hidden.json', 'r') as read_file:\n",
     "    card_deck = json.load(read_file)\n",
-    "\n",
     "\n",
     "# clear the card_images folder\n",
     "print(\"Clearing card_images folder...\")\n",
@@ -175,35 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Spirit of the Blues', 'summary': ['Spirit of the Blues', 'Spirit of the Blues, Spirit of the Blues is a song recorded by Kinsley Music. It was released in April 1984 by Liverpool-based Direct Records ahead of the 1984 FA Cup Final.\\\\nIn September 2020, the song became popular having been featured in social media memes. The origin of the meme was posted on 2 September 2020 on Twitter by user adamsg1878; it contained footage from the music video of Coldplays Adventure of a Lifetime featuring chimpanzees dancing around and enjoying themselves while Spirit of the Blues music played. It was accompanied with the text Were actually signing James, Allan and Doucoure.The song reached #65 in the Official Singles Chart Top 100 and #1 in the downloads chart for 2-8 October 2020. It was re-released on vinyl on 2 October 2020 by Everton F.C. in conjunction with Cherry Red Records, with a piano version of Z-Cars on the B-side.'], 'related': 39}\n"
+      "{'title': 'Quarterstaff: The Tomb of Setmoth', 'summary': ['Quarterstaff: The Tomb of Setmoth', 'this/they/it, this/they/it is an interactive fiction role-playing video game developed by scott schmitz and ken updike and released by infocom for macintosh in 1988. --- game features a text parser, graphics, a dynamically updated map, and a graphical interface that incorporates mac os hierarchical menus.'], 'related': 98}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4234/4234 [01:50<00:00, 38.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 58%|█████▊    | 3005/5167 [01:24<01:00, 35.83it/s]"
      ]
     }
    ],
